# soothe

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  BROWSER_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLI_PLANNING.md  GAP_ANALYSIS_REPORT.md  MIGRATION.md  Makefile  README.md  TODO.md  cli_config.dev.yml  config.dev.yml  config.minimal.yml  debug_case1.md  docker-compose.yml  pyproject.toml  to_fix_detach_issue.md
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml  release.yml
_bmad-output/: architecture-review-report-2026-04-17.md  rfc-architecture-index-2026-04-17.md  rfc-consolidated-numbering-9-categories-2026-04-17.md  rfc-consolidation-5phase-progress-2026-04-17.md  rfc-consolidation-complete-2026-04-17.md  rfc-merge-proposal-compact-2026-04-17.md  rfc-updates-summary-2026-04-17.md
_bmad-output/brainstorming/: brainstorming-session-2026-04-17-144552.md
benchmarks/: BM-001-workspace-injection.md  BM-002-subagent-selection.md  BM-003-ai-driven-daemon-endpoint.md  BM-004-security-verification.md  README.md  run_bm003_daemon_endpoint.py  run_bm004_security_verification.py
config/: cli_config.dev.yml  config.dev.yml  config.minimal.yml  config.yml  env.example  init-db.sql  soothe_home_config.yml
docs/: IG-174-optimization-complete.md  cli-daemon-architecture.md  cli-entry-points-architecture.md  cli-import-violations-analysis.md  gap-analysis-brainstorming-to-rfc.md  gap-fix-summary.md  howto_debug.md  howto_validate_streaming.md  llm_tracing.md  lms_endpoint_compatibility_analysis.md  lms_json_schema_empty_response_analysis.md  migration-guide-v0.3.md  provider_type_limited_openai.md  session-summary-2026-04-15.md  spec-gap-fix-summary.md  specs-refine-RFC-404-report.md  user_guide.md  version-management.md
docs/analysis/: cli-entry-points-architecture.md  daemon-event-forwarding-matrix.md  goal_completion_response_workflow.md  llm-communication-analysis.md  loop_checkpoint_flaws.md  rfc-verification-report-001.md  sqlite_migration_logics.md  subagent-in-plan-steps-analysis.md
docs/drafts/: 003-cli-tui-event-progress-clarity.md  004-rfc-0008-polish-agentic-loop.md  2026-03-29-coreagent-layer1-interface-design.md  2026-03-29-layer1-coreagent-stepaction-integration-design.md  2026-03-29-rfc-0008-layer2-implementation-design.md  2026-03-29-rfc0020-three-level-trees-design.md  2026-03-29-three-layer-architecture-foundation-design.md  2026-03-29-three-layer-architecture-refinement.md  2026-03-29-verbosity-tier-unification-design.md  2026-03-29-websocket-only-transport-design.md  2026-03-30-tool-event-naming-design.md  2026-03-31-dynamic-system-context-design.md  2026-03-31-thread-aware-workspace-design.md  2026-04-03-autopilot-mode-design.md  2026-04-04-sqlite-backend-design.md  2026-04-07-layer2-context-isolation-design.md  2026-04-08-cli-display-refactoring-design.md  2026-04-08-layer2-unified-state-checkpoint.md  2026-04-08-message-passing-architecture-design.md  2026-04-08-prompt-architecture-design.md  2026-04-09-coreagent-message-optimization-design.md  2026-04-09-dynamic-tool-system-context-injection-design.md  2026-04-09-reasoning-quality-progressive-actions-design.md  2026-04-09-thread-isolation-simplification-design.md  2026-04-10-layer2-tool-result-optimization-design.md  2026-04-11-provider-compatibility-layer-design.md  2026-04-11-reason-phase-robustness-design.md  2026-04-13-deepagents-cli-migration-design.md  2026-04-13-explore-subagent-parallel-spawning-design.md  2026-04-14-progressive-display-refinements-design.md  2026-04-15-event-naming-semantics-unification-design.md  2026-04-16-loop-lifecycle-design.md  2026-04-16-slash-commands-architecture-design.md  2026-04-17-goal-context-management-design.md  2026-04-17-sdk-structure-refactoring-design.md  2026-04-18-agentloop-goalengine-handoff-refinement-design.md  2026-04-19-thread-history-recovery-gap-analysis.md  2026-04-22-persistence-architecture-refactor-design.md  2026-04-24-explore-agent-redesign-design.md  2026-04-24-filesystem-middleware-extension-design.md  (+7 more)
docs/impl/: 004-ecosystem-capability-analysis.md  005-core-protocols-implementation.md  006-vectorstore-router-persistence.md  010-tui-layout-history-refresh.md  013-soothe-polish-pass.md  014-code-structure-revision.md  018-autonomous-iteration-loop.md  020-detached-daemon-autonomous-capability.md  021-daemon-lifecycle-fixes.md  021-performance-optimization-implementation.md  022-unified-persistence-storage.md  023-postgres-db-separation-and-persistence-deadlock-fix.md  024-rfc0010-gap-fixes.md  025-subagent-progress-visibility.md  027-final-report-cli-output.md  032-unified-complexity-classification.md  033-secure-filesystem-path-handling.md  034-cli-modularization.md  037-unified-classifier-refactoring.md  040-tool-optimization-complete.md  041-cli-polish.md  042-tool-events-polish.md  043-planning-unified-architecture-guide.md  043-unified-planning-complete.md  044-unified-planning-final-report.md  046-unified-daemon-protocol.md  047-event-bus-architecture.md  047-memu-migration-python-version-update.md  047-skills-migration.md  047-unified-thread-management.md  (+296 more)
examples/: _config_helper.py  batch_tasks_example.py  browser_example.py  claude_example.py  example_plugin.py  planner_example.py  research_example.py  scout_example.py
scripts/: benchmark_e2e_concurrent_queries.py  check_chrome.sh  check_module_import_boundaries.sh  cleanup_orphaned_checkpoints.py  fix_orphaned_goals.py  migrate_event_names.py  update_cli_imports.py  update_daemon_imports.py  update_rfc_references.py  validate_event_names.py  validate_streaming.sh  verify_finally.sh
sdk/: pyproject.toml
soothe-community-pkg/: CONTRIBUTING.md  MIGRATION.md  README.md  pyproject.toml
soothe-sdk-pkg/: .gitignore  MANIFEST.md  MIGRATION.md  pyproject.toml
src/soothe_sdk/: README.md  pyproject.toml
src/soothe_sdk/decorators/: __init__.py  plugin.py  subagent.py  tool.py
src/soothe_sdk/types/: manifest.py
tests/: README.md  task-download-skills.md  test_plugin_community_integration.py  test_plugin_gaps_fix.py  test_sdk_basic.py
(+939 files in other folders)
