[project]
name = "soothe"
version = "0.3.0"
description = "DEPRECATED: Use soothe-cli and soothe-daemon instead"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
keywords = ["agents", "ai", "llm", "langgraph", "langchain", "multi-agent", "subagents", "deprecated"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
# Meta-package: Install both CLI and daemon
cli = [
    "soothe-cli>=0.1.0",
    "soothe-daemon>=0.3.0",
]

# Convenience: Install everything (deprecated)
all = [
    "soothe-cli>=0.1.0",
    "soothe-daemon[all]>=0.3.0",
]

[project.optional-dependencies]
# -- Tool implementation extras --
research = [
    "arxiv>=2.1.0",
    "langchain-tavily>=0.2.17",
    "tavily-python>=0.5.0",
    "wikipedia>=1.4.0",
    "wizsearch>=1.1.8,<2.0.0",
]
websearch = [
    "browser-use>=0.11.0,<=0.12.0",
    "langchain-tavily>=0.2.17",
    "wizsearch>=1.1.7,<2.0.0",
]
tabular = [
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]
document = [
    "PyMuPDF>=1.24.0",
]
cli = [
    "pexpect>=4.9.0",
]
python-executor = [
    "ipython>=8.0.0",
    "matplotlib>=3.8.0",
]
# -- Subagent / provider extras --
claude = [
    "claude-agent-sdk>=0.1.40,<0.1.49",
]
media = [
    "pillow>=10.0.0",
    "openai>=1.0.0",
]
video = [
    "google-genai>=0.3.0",
]
# -- Persistence / infra extras --
rocksdb = [
    "rocksdict>=0.3",
]
pgvector = [
    "psycopg[pool]>=3.1",
    "pgvector>=0.3",
    "langgraph-checkpoint-postgres>=3.0.0,<4.0.0",
]
weaviate = [
    "weaviate-client>=4.0",
]
ollama = [
    "langchain-ollama>=0.3.0",
]
dashscope = [
    "dashscope>=1.25.14",
]
# -- Meta extras --
all = [
    "soothe[research,websearch,tabular,document,cli,python-executor,claude,media,video,rocksdb,pgvector,weaviate,ollama,dashscope]",
]
# Legacy alias: 'bash' maps to 'cli'
bash = [
    "pexpect>=4.9.0",
]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soothe"]
artifacts = [
    "src/soothe/skills/**/*.md",
    "src/soothe/config/*.yml"
]

[tool.hatch.build.targets.sdist]
include = [
    "src/soothe/",
    "src/soothe/skills/**/*.md",
    "src/soothe/config/*.yml"
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
]

# No entry points - this package is deprecated
# Use soothe-cli and soothe-daemon packages instead

[tool.ruff]
line-length = 120
exclude = []

[tool.ruff.format]

