[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soothe-meta"
version = "0.1.0"
description = "Meta-package to install soothe-cli and soothe-daemon"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
keywords = ["soothe", "agents", "ai", "llm", "meta-package"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
# Meta-package: Install both CLI and daemon
cli = [
    "soothe-cli>=0.1.0",
    "soothe-daemon>=0.3.0",
]

# Convenience: Install everything
all = [
    "soothe-cli>=0.1.0",
    "soothe-daemon[all]>=0.3.0",
]

# No entry points - this is just a meta-package

[project.urls]
Homepage = "https://github.com/caesar0301/soothe"
Documentation = "https://soothe.readthedocs.io"
Repository = "https://github.com/caesar0301/soothe"

# No build targets - meta-package with no source code