[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soothe-sdk"
version = "0.1.0"
description = "SDK for building Soothe plugins with decorator-based API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Soothe Team", email = "soothe@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "langchain-core>=1.2.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/example/soothe"
Documentation = "https://soothe.readthedocs.io"
Repository = "https://github.com/example/soothe"

[tool.hatch.build.targets.wheel]
packages = ["soothe_sdk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true